# Nex

./: CHANGELOG-security-hardening.md  README.md  STRUCTURE.md  pyproject.toml  requirements.txt
config/: default.yaml
desktop/: electron-vite.config.ts  package.json  tsconfig.json
desktop/resources/: icon.icns
desktop/src/main/: index.ts  python-bridge.ts  tray.ts  window.ts
desktop/src/preload/: index.ts
kai/: __init__.py  __main__.py
kai/api/: __init__.py  __main__.py  command_handler.py  memory_manager.py  server.py  system_monitor.py  web_tools.py  websocket_handler.py
kai/api/routes/: __init__.py  commands.py  files.py  settings.py  spreadsheets.py  status.py
kai/core/: __init__.py  engine.py  event_bus.py
kai/io/: config.py  enhanced_file_ops.py  file_manager.py  spreadsheet.py
kai/speech/: __init__.py  intent.py  recognizer.py  synthesizer.py
kai/ui/static/: index.html
kai/ui/static/css/: style.css
kai/ui/static/js/: app.js  kai-dashboard.js  kai-orb.js  kai-settings.js  matrix.js
kai/utils/: __init__.py  logger.py
kai/vision/: __init__.py  camera.py  gesture.py  motion.py
kai/voice/: listener.py  wake_word.py
mobile/: package.json  tsconfig.json
mobile/src/components/: KaiOrb.tsx  NexOrb.tsx
mobile/src/screens/: FilesScreen.tsx  HomeScreen.tsx  SettingsScreen.tsx
mobile/src/services/: Discovery.ts  KaiClient.ts  NexClient.ts
nex/: __init__.py  __main__.py
nex/api/: __init__.py  __main__.py  audit_logger.py  command_handler.py  memory_manager.py  server.py  system_monitor.py  vision_tools.py  voice_auth.py  web_tools.py  websocket_handler.py
nex/api/routes/: __init__.py  commands.py  files.py  logs.py  modules.py  settings.py  spreadsheets.py  status.py
nex/cli/: __init__.py  __main__.py  agent.py  renderer.py  session.py  tools.py
nex/core/: __init__.py  engine.py  event_bus.py
nex/io/: __init__.py  config.py  enhanced_file_ops.py  file_manager.py  spreadsheet.py
nex/plugins/: __init__.py
nex/speech/: intent.py  recognizer.py  synthesizer.py
nex/ui/: __init__.py  __main__.py  server.py
nex/ui/static/: index.html
nex/ui/static/css/: style.css
nex/ui/static/js/: app.js  matrix.js  nex-boot.js  nex-conversation.js  nex-dashboard.js  nex-logs.js  nex-orb.js  nex-services.js  nex-settings.js  nex-sounds.js  nex-workspace.js  particles.js  thoughts.js
nex/utils/: __init__.py  logger.py
nex/vision/: camera.py  gesture.py  motion.py
nex/voice/: __init__.py  listener.py  mic_listener.py  wake_word.py
scripts/: generate_icon.py
tests/: __init__.py  test_api_server.py  test_enhanced_file_ops.py  test_event_bus.py  test_file_manager.py  test_intent.py  test_spreadsheet.py  test_wake_word.py
